--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Blog-Yue
 subtitle:
 description:
 keywords:
-author: John Doe
+author: Yue
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://yuec621.github.io/Blog-Yue/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
